# framegrabber

./: .gitignore  .pre-commit-config.yaml  README.md  env.example  framegrabber.py  pyproject.toml
src/framegrabber/: __init__.py  classify.py  config.py  fetch.py  main.py  notify.py  state.py  triggers.py
systemd/: framegrabber.service  framegrabber.timer
tests/: test_classify.py  test_framegrabber.py  test_main.py  test_notify.py  test_state.py  test_triggers.py
