[project]
name = "framegrabber"
version = "0.2.0"
description = "Watch Valve's store + news for the Steam Frame release and push an ntfy alert"
readme = "README.md"
requires-python = ">=3.12"
# Runtime is stdlib-only on purpose: the script ships as a k8s ConfigMap and runs on a stock
# python:3.12-slim image with no dependencies or build step.
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "ty>=0.0.43",
]

# Not an installable package — just a script + tests.
[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
